--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,10 @@
     android:layout_height="match_parent"
     tools:context="com.app.kien.dayunity.MainActivity">
 
-
+    <ListView
+        android:id="@+id/listView1"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent">
+    </ListView>
 
 </android.support.constraint.ConstraintLayout>
