--- a/app/src/main/res/layout/activity_detalhe.xml
+++ b/app/src/main/res/layout/activity_detalhe.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,10 +8,11 @@
     tools:context="com.app.kien.dayunity.DetalheActivity">
 
     <LinearLayout
+        android:layout_margin="5dp"
+        android:layout_marginTop="10dp"
         android:id="@+id/textosBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:orientation="horizontal"
         android:padding="10dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
@@ -24,17 +25,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:padding="10dp"
             android:text="@string/nome"
             android:textStyle="bold" />
-
 
         <TextView
             android:id="@+id/diaSemanaTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:padding="10dp"
             android:text="@string/diaSemana"
             android:textAlignment="viewEnd"
             android:textStyle="bold" />
@@ -43,24 +41,17 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:src="@drawable/placeholder"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="130dp"
-        tools:ignore="MissingConstraints" />
+        android:src="@drawable/placeholder" />
 
     <TextView
+        android:layout_margin="10dp"
         android:id="@+id/descricaoTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/descricao"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
-
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
