--- a/app/src/main/res/layout/activity_detalhe.xml
+++ b/app/src/main/res/layout/activity_detalhe.xml
@@ -8,11 +8,11 @@
     tools:context="com.app.kien.dayunity.DetalheActivity">
 
     <LinearLayout
-        android:layout_margin="5dp"
-        android:layout_marginTop="10dp"
         android:id="@+id/textosBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal"
         android:padding="10dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
@@ -26,6 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:text="@string/nome"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <TextView
@@ -33,6 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textSize="20sp"
             android:text="@string/diaSemana"
             android:textAlignment="viewEnd"
             android:textStyle="bold" />
@@ -42,15 +44,16 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="291dp"
         android:src="@drawable/placeholder" />
 
     <TextView
-        android:layout_margin="10dp"
         android:id="@+id/descricaoTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:text="@string/descricao"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
