--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -17,14 +17,14 @@
         android:layout_alignParentStart="true">
 
         <ImageView
-            android:id="@+id/iv"
+            android:id="@+id/imageViewSplash"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:src="@drawable/logodayunity" />
 
         <TextView
-            android:id="@+id/tv"
+            android:id="@+id/textViewSplash"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
