--- a/app/src/main/res/layout/activity_detalhe.xml
+++ b/app/src/main/res/layout/activity_detalhe.xml
@@ -21,6 +21,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            android:textColor="@color/black"
             android:id="@+id/nomeTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -30,6 +31,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:textColor="@color/orange"
             android:id="@+id/diaSemanaTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
